--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: npm ci
-
-      - run: npm ci
         shell: bash
 
       - run: npm run build
@@ -37,7 +35,7 @@ jobs:
       - run: git config user.email github-actions@github.com
         shell: bash
 
-      - run: git --work-tree build add --all
+      - run: git --work-tree docs add --all
         shell: bash
 
       - run: git commit -m "Automatic Build and Deploy run by GitHub Actions"
