--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,21 +29,24 @@ jobs:
         shell: bash
       # TODO: do I need env and tokens here?
 
-      - run: git config user.name github-actions
-        shell: bash
+      # - run: git config user.name github-actions
+      #   shell: bash
 
-      - run: git config user.email github-actions@github.com
-        shell: bash
+      # - run: git config user.email github-actions@github.com
+      #   shell: bash
 
-      - run: git --work-tree docs add --all
+      # - run: git --work-tree docs add --all
+      #   shell: bash
+
+      - run: git add .
         shell: bash
 
       - run: git commit -m "Automatic Build and Deploy run by GitHub Actions"
         shell: bash
 
-      - run: git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - run: git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: git push origin HEAD:gh-pages --force
         shell: bash
