--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --hot",
-    "build": "rimraf docs && cross-env NODE_ENV=production && webpack --config webpack.config.mjs",
+    "build": "rimraf docs && cross-env NODE_ENV=production webpack --config webpack.config.mjs",
+    "build:development": "rimraf docs && cross-env NODE_ENV=production webpack --config webpack.config.mjs",
     "eslint": "eslint",
     "tslint": "tsc --noEmit --skipLibCheck"
   },
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^8.23.0",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9.20.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
