Clean up app for production deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm ci
         shell: bash
 
-      - run: npm run build:development
+      - run: npm run build
         shell: bash
         env:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
