--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --hot",
-    "build": "rimraf docs && cross-env NODE_ENV=production webpack --config webpack.config.mjs",
+    "build": "rimraf docs && cross-env NODE_ENV=production webpack --config webpack.config.mjs && cp ./src/404.html ./docs/404.html",
     "eslint": "eslint",
     "tslint": "tsc --noEmit --skipLibCheck"
   },
